--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
     "editor.defaultFormatter": "denoland.vscode-deno"
   },
   "cSpell.words": [
-    "nuxt"
+    "nuxt",
+    "vexip"
   ],
   "deno.enablePaths": [
     "supabase/functions"
