--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@valibot/i18n": "^0.13.0",
+    "@valibot/valibot": "npm:@jsr/valibot__valibot@^0.31.0-rc.4",
     "@vexip-ui/nuxt": "^1.3.1",
     "nuxt": "^3.11.2",
     "vue": "^3.4.21",
