--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.43.4",
     "@valibot/i18n": "^0.13.0",
     "@valibot/valibot": "npm:@jsr/valibot__valibot@^0.31.0-rc.4",
     "@vexip-ui/nuxt": "^1.3.1",
