--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
     "nuxtjs",
     "supabase",
     "valibot",
-    "vexip"
+    "vexip",
+    "vueuse"
   ],
   "deno.enablePaths": [
     "supabase/functions"
