--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@valibot/i18n": "^0.13.0",
     "@valibot/valibot": "npm:@jsr/valibot__valibot@^0.31.0-rc.4",
     "@vexip-ui/nuxt": "^1.3.1",
+    "@vueuse/nuxt": "^10.9.0",
     "nuxt": "^3.11.2",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
