--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@supabase/supabase-js": "^2.43.4",
     "@valibot/i18n": "^0.13.0",
     "@valibot/valibot": "npm:@jsr/valibot__valibot@^0.31.0-rc.4",
+    "@vee-validate/nuxt": "^4.13.1",
+    "@vee-validate/valibot": "^4.13.1",
     "@vueuse/nuxt": "^10.9.0",
     "nuxt": "^3.11.2",
     "nuxt-primevue": "^3.0.0",
